# centerline

./: .bumpversion.cfg  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  centerline.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  shp2centerline.py  tox.ini
.github/workflows/: ci.yml
centerline/: __init__.py  centerline.py  io.py  main.py  utils.py
changelog.d/: 23.misc.rst  23.removal.rst  25.misc.md  26.misc.md  30.feature.md  30.removal.md  34.bugfix.rst  39.misc.rst  44.feature.md  47.bugfix.rst
docs/: Makefile  conf.py  index.rst  make.bat
docs/chapters/: changelog.rst  faq.rst  installation.rst  usage.rst
docs/modules/: centerline.rst
docs/source/: conf.py  faq.rst  index.rst  installation.rst  usage.rst
docs/source/modules/: centerline.rst  modules.rst
requirements/: base.txt  development.txt  docs.txt  testing.txt
scripts/: create_centerlines  create_centerlines.py  travis_filegdb_install.sh  travis_gdal_install.sh
src/centerline/: __init__.py  converters.py  exceptions.py  geometry.py  io.py  main.py  utils.py
tests/: conftest.py  test_geometry.py  test_init.py  test_io.py  test_main.py  test_scripts.py  test_utils.py
tests/data/geojson/: linestrings.geojson  points.geojson  polygons.geojson
tests/data/shp/: polygons.dbf  polygons.shp  polygons.shx
