[build-system]
requires = ["setuptools>=40.7.0", "wheel>=0.31.1"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.towncrier]
  package = "centerline"
  package_dir = "src"
  filename = "CHANGELOG.rst"
  directory = "changelog.d"
  title_format = "v{version} ({project_date})"
  issue_format = "`#{issue} <https://github.com/fitodic/centerline/pull/{issue}>`_"
  underlines = ["-", "^"]

  [[tool.towncrier.section]]
      path = ""

  [[tool.towncrier.type]]
      directory = "feature"
      name = "Features"
      showcontent = true

  [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bugfixes"
      showcontent = true

  [[tool.towncrier.type]]
      directory = "doc"
      name = "Improved Documentation"
      showcontent = true

  [[tool.towncrier.type]]
      directory = "removal"
      name = "Deprecations and Removals"
      showcontent = true

  [[tool.towncrier.type]]
      directory = "misc"
      name = "Misc"
      showcontent = true
