[metadata]
name = centerline
version = attr: centerline.VERSION
description = Calculate the centerline of a polygon
long_description = file: README.rst
keywords = polygon, centerline, Voronoi
license = MIT License
license-file = LICENSE
url = https://github.com/fitodic/centerline
download_url = https://pypi.org/project/centerline/
author = Filip Todic
author_email = todic.filip@gmail.com
platforms = POSIX, Microsoft, MacOS
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	Topic :: Scientific/Engineering :: GIS
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = centerline
scripts =
	scripts/create_centerlines
install_requires =
	GDAL>=2.3.3
	Fiona>=1.7.0
	Shapely>=1.5.13
	numpy>=1.10.4
	scipy>=0.16.1

[options.extras_require]
dev = ipdb
lint =
	pylama
	isort
	yapf
test =
	coverage
	pytest>=4.0.0
	pytest-cov
	pytest-sugar
	pytest-runner
docs =
	sphinx
	sphinx_rtd_theme

[bdist_wheel]
universal = 1

[isort]
# Reference: https://github.com/timothycrosley/isort/wiki/isort-Settings
skip=.git,__pycache__,docs,build,dist,*.egg*,.tox
atomic=true
multi_line_output=5
known_third_party=numpy,scipy,fiona,osgeo,shapely,sphinx_rtd_theme
known_first_party=centerline
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[pylama]
# Reference: https://pylama.readthedocs.io/en/latest/#configuration-file
# D100 Missing docstring in public module
# D104 Missing docstring in public package
# D203 1 blank line required before class docstring
# D212 Multi-line docstring summary should start at the first line
# D406 Section name should end with a newline
# D407 Missing dashed underline after section
async = 1
skip=.git,__pycache__,docs,build/*,dist/*,*.egg*,.ropeproject/*,*.tox/*
ignore = D100,D104,D203,D212,D406,D407
linters = pycodestyle,pyflakes,mccabe,pydocstyle,pep257
verbose = 0

[pylama:pyflakes]
builtins = _

[pylama:tests/*.py]
# D101 Missing docstring in public class
# D102 Missing docstring in public method
ignore = D101,D102

[aliases]
test = pytest

[tool:pytest]
addopts =
	--cov centerline
	--cov-config .coveragerc
	--cov-report term
	-s
testpaths = tests

[coverage:run]
branch=True

[coverage:report]
show_missing = True

[yapf]
based_on_style = google

# The column limit.
column_limit=79
