[metadata]
name = centerline
version = attr: centerline.VERSION
description = Calculate the centerline of a polygon
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = polygon, centerline, Voronoi
license = MIT License
license_file = LICENSE
url = https://github.com/fitodic/centerline
download_url = https://pypi.org/project/centerline/
author = Filip Todic
author_email = todic.filip@gmail.com
platforms = POSIX, Microsoft, MacOS
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	Topic :: Scientific/Engineering :: GIS
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Visualization

[options]
python_requires = >= 3.7
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
	Fiona>=1.7.0
	Shapely>=1.5.13
	numpy>=1.10.4
	scipy>=0.16.1
	Click>=7.0

[options.packages.find]
where=src

[options.extras_require]
dev =
	ipdb
	tox
gdal =
	GDAL>=2.3.3
lint =
	flake8
	isort
	black
test =
	coverage
	pytest>=4.0.0
	pytest-cov
	pytest-sugar
	pytest-runner
docs =
	sphinx

[bdist_wheel]
universal = 1

[isort]
# Reference: https://github.com/timothycrosley/isort/wiki/isort-Settings
atomic=true
force_grid_wrap=0
include_trailing_comma=true
line_length=79
lines_after_imports=2
lines_between_types=1
known_third_party=numpy,scipy,fiona,osgeo,shapely,gdal,ogr,pytest,click
known_first_party=centerline
multi_line_output=3
skip=.git,__pycache__,docs,build,dist,*.egg*,.tox,.travis,.venv
use_parentheses=True

[aliases]
test = pytest

[tool:pytest]
addopts =
	-s
testpaths = tests

[coverage.html]
skip_covered=True
skip_empty=True

[coverage:run]
branch=True
parallel=True
source=src

[coverage:paths]
source=src

[coverage:report]
show_missing=True

[flake8]
exclude =
	.git,
	__pycache__,
	.tox,
	.vscode,
	.requirements,
	static,
	**/migrations/**,
	.venv
max-line-length = 79
